# currency-converter

./: .Dockerfile-fastapi  .Dockerfile-flask  .docker-compose.yml  Dockerfile  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  start.sh
.github/workflows/: status.yml
alembic/: env.py
alembic/versions/: 48431bf08ba3_initial_migration.py
converter/: api.py  app.py  currency.py  currency_api.py  currency_db.py  currency_logic.py  database.db  db.py  models.py
converter/static/: app.js  main.css
converter/templates/: base.html  index.html
converter/templates/components/: footer.html  navbar.html
converter/tests/: test_api.py  test_currency_api.py  test_currency_db.py  test_currency_logic.py  test_db.py  test_models.py
