[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = ["Nikolai <nicolas.gordienko@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "converter"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
flask = "^3.0.0"
gunicorn = "^21.2.0"
flake8 = "^6.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.4"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
